--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,5 +57,5 @@
     "Temp/": true
   },
   "dotnet.defaultSolution": "ButtonPusher.sln",
-  "workbench.colorTheme": "Dracula At Night"
+  "workbench.colorTheme": "eppz!"
 }
